...
        app:layout_constraintTop_toBottomOf="@+id/textField_userLoginFrag_password"
        />


    <!-- back button above -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textButton_UserLoginFrag_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up_user"
...
