...
    android:layout_height="match_parent"
    android:background="@color/black_background"
    tools:context=".view.HomeMyMoodsFrag">

    <!-- RecyclerView for the mood list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_HomeMyMoodsFragment_userrecyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_HomeMyMoodsFragment_addmood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/primary_dark_grape"
        app:tint="@color/white"
        app:srcCompat="@drawable/ic_add"
...
