<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendRequestFrag">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id='@+id/textView_FollowerRequestFrag'
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Friend Requests here" />

</FrameLayout>